fix gap de container en sociedades

--- a/style.css
+++ b/style.css
@@ -365,6 +365,7 @@ p {
 
 #sociedades .container {
     align-items: center;
+    gap: 10px;
 }
 
 #sociedades .container > a:last-child img {
